Preparing for python 3

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,8 @@ services:
 env:
   - TOXENV=py26
   - TOXENV=py27
+  - TOXENV=py33
+  - TOXENV=py34
 install:
   - pip install tox coveralls --use-mirrors
 before_script:
